# cryptoauthlib

./: CMakeLists.txt  README.md
cmake/: zephyr_options.cmake
lib/: CMakeLists.txt
lib/calib/: calib_read.c
tests/zephyr/build_verification/: CMakeLists.txt  prj.conf  testcase.yaml
tests/zephyr/build_verification/src/: main.c
zephyr/: Kconfig
